@@ -23,9 +23,7 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
-import org.apache.maven.model.Model;
 import org.bonitasoft.studio.common.FileUtil;
 import org.bonitasoft.studio.common.log.BonitaStudioLog;
 import org.bonitasoft.studio.common.repository.core.maven.MavenProjectHelper;
@@ -41,6 +39,7 @@ import org.eclipse.core.runtime.preferences.DefaultScope;
 import org.eclipse.core.runtime.preferences.IEclipsePreferences;
 import org.eclipse.m2e.core.MavenPlugin;
 import org.eclipse.m2e.core.internal.IMavenConstants;
+import org.eclipse.m2e.core.internal.IMavenToolbox;
 import org.eclipse.m2e.core.internal.preferences.MavenPreferenceConstants;
 import org.eclipse.m2e.core.project.IProjectConfigurationManager;
 import org.eclipse.m2e.core.project.LocalProjectScanner;
@@ -54,16 +53,22 @@ public class ImportBonitaProjectOperation implements IWorkspaceRunnable {
     private File projectRoot;
     private IProjectConfigurationManager projectConfigurationManager;
     private String projectId;
+    private boolean isNewProject;
 
     public ImportBonitaProjectOperation(File projectRoot) {
         this.projectRoot = projectRoot;
         this.projectConfigurationManager = MavenPlugin.getProjectConfigurationManager();
     }
 
+    public ImportBonitaProjectOperation newProject() {
+        this.isNewProject = true;
+        return this;
+    }
+
     @Override
     public void run(final IProgressMonitor monitor) throws CoreException {
         if (projectRoot == null || !projectRoot.exists()
-                || !projectRoot.toPath().resolve(".project").toFile().exists()) {
+                || (!isNewProject && !projectRoot.toPath().resolve(".project").toFile().exists())) {
             throw new CoreException(Status.error(String.format("No project found at %s", projectRoot)));
         }
         // We check for an homonym project first. In this case, we do not need to migrate and migration steps will confuse the 2 projects.
@@ -75,7 +80,9 @@ public class ImportBonitaProjectOperation implements IWorkspaceRunnable {
                             projectIdBeforeMigr)));
         }
         // Migrate the project to import.
-        report = new BonitaProjectMigrator(projectRoot.toPath()).run(monitor);
+        if (!isNewProject) {
+            report = new BonitaProjectMigrator(projectRoot.toPath()).run(monitor);
+        }
         var generatedSourcesFolder = projectRoot.toPath().resolve(BonitaProject.APP_MODULE)
                 .resolve(AppProjectConfiguration.GENERATED_GROOVY_SOURCES_FODLER);
         if (!Files.exists(generatedSourcesFolder)) {
@@ -93,7 +100,9 @@ public class ImportBonitaProjectOperation implements IWorkspaceRunnable {
                     Status.error(String.format("A project with id %s already exists in the workspace.", projectId)));
         }
 
-        removeUidProvidedWidgets();
+        if (!isNewProject) {
+            removeUidProvidedWidgets();
+        }
         var projectInWs = ResourcesPlugin.getWorkspace().getRoot().getLocation().append(projectId).toFile();
         if (!Objects.equals(projectRoot.toPath(), projectInWs.toPath())) {
             try {
@@ -109,8 +118,7 @@ public class ImportBonitaProjectOperation implements IWorkspaceRunnable {
 
         var pomFile = projectInWs.toPath().resolve("pom.xml").toFile();
         var localProjectScanner = new LocalProjectScanner(
-                ResourcesPlugin.getWorkspace().getRoot().getLocation().toFile(),
-                pomFile.getParentFile().getAbsolutePath(),
+                List.of(pomFile.getParentFile().getAbsolutePath()),
                 false,
                 MavenPlugin.getMavenModelManager());
         try {
@@ -118,25 +126,22 @@ public class ImportBonitaProjectOperation implements IWorkspaceRunnable {
         } catch (InterruptedException e) {
             throw new CoreException(Status.error("Failed to scan local projects", e));
         }
-
         var store = DefaultScope.INSTANCE.getNode(IMavenConstants.PLUGIN_ID);
         var autoUpdate = store.getBoolean(MavenPreferenceConstants.P_AUTO_UPDATE_CONFIGURATION, true);
         setAutoUpdateConfiguration(store, false);
         try {
-            var projectImportConfiguration = new BonitaProjectImportConfiguration(projectId);
-            projectConfigurationManager.importProjects(
-                    flatten(localProjectScanner.getProjects()).stream()
-                            .filter(bdmProjects()).collect(Collectors.toList()),
-                    projectImportConfiguration, monitor);
-
-            projectConfigurationManager.importProjects(
-                    flatten(localProjectScanner.getProjects()).stream()
-                            .filter(Predicate.not(bdmProjects())).collect(Collectors.toList()),
-                    projectImportConfiguration, monitor);
+            for (var mavenProject : flatten(localProjectScanner.getProjects()).stream()
+                    .sorted((p1, p2) -> bdmProjects().test(p1) ? -1 : 1).toList()) {
+                var importConfiguration = createProjectImportConfiguration(mavenProject);
+                if (importConfiguration != null) {
+                    projectConfigurationManager.importProjects(List.of(mavenProject),
+                            importConfiguration,
+                            monitor);
+                }
+            }
         } finally {
             setAutoUpdateConfiguration(store, autoUpdate);
         }
-
     }
 
     /**
@@ -158,6 +163,25 @@ public class ImportBonitaProjectOperation implements IWorkspaceRunnable {
         }
         // Project cloned from version below 7.13.0
         return null;
+    }
+
+    private ProjectImportConfiguration createProjectImportConfiguration(MavenProjectInfo mavenProject)
+            throws CoreException {
+        try (var in = Files.newInputStream(mavenProject.getPomFile().toPath())) {
+            var projectImportConfiguration = new ProjectImportConfiguration();
+            var model = IMavenToolbox.of(MavenPlugin.getMaven()).readModel(in);
+            if (projectId.equals(model.getArtifactId())) {
+                projectImportConfiguration.setProjectNameTemplate(projectId + "-app");
+            } else if ((projectId + "-parent").equals(model.getArtifactId())) {
+                projectImportConfiguration.setProjectNameTemplate(projectId);
+            } else {
+                projectImportConfiguration.setProjectNameTemplate("[artifactId]");
+            }
+            return projectImportConfiguration;
+        } catch (IOException e) {
+            BonitaStudioLog.error(e);
+            return null;
+        }
     }
 
     private void setAutoUpdateConfiguration(IEclipsePreferences store, boolean enanbled) {
@@ -205,7 +229,7 @@ public class ImportBonitaProjectOperation implements IWorkspaceRunnable {
         for (MavenProjectInfo t : projects) {
             flatList.add(t);
             if (t.getProjects() != null) {
-                flatList.addAll((List<MavenProjectInfo>) flatten(t.getProjects()));
+                flatList.addAll(flatten(t.getProjects()));
             }
         }
         return flatList;
@@ -213,28 +237,6 @@ public class ImportBonitaProjectOperation implements IWorkspaceRunnable {
 
     public MigrationReport getReport() {
         return report;
-    }
-
-    class BonitaProjectImportConfiguration extends ProjectImportConfiguration {
-
-        private String projectId;
-
-        public BonitaProjectImportConfiguration(String projectId) {
-            this.projectId = projectId;
-        }
-
-        @Override
-        public String getProjectName(Model model) {
-            if (projectId.equals(model.getArtifactId())) {
-                setProjectNameTemplate(projectId + "-app");
-            } else if ((projectId + "-parent").equals(model.getArtifactId())) {
-                setProjectNameTemplate(projectId);
-            } else {
-                setProjectNameTemplate("[artifactId]");
-            }
-            return super.getProjectName(model);
-        }
-
     }
 
 }
